# seqbed

./: .gitignore  README.md  setup.cfg
examples/: cellmodel_example.py  deathmodel_example.py  deathmodel_example_continued.py  sirmodel_example.py
src/seqbed/: inference.py  methods.py  robust.py  sequentialdesign.py  simulator.py  utility.py
