[metadata]
name = seqbed
version = 0.1.0a1
license = MIT
license_files = LICENSE
url = https://github.com/stevenkleinegesse/seqbed
author = Steven Kleinegesse
author_email = steven.kleinegesse@ed.ac.uk
keywords = mutual-information experimental-design intractable-likelihood lfire abc
description = A package to perform sequential Bayesian experimental design for implicit models via mutual information.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
install_requires =
    numpy
    joblib
    scipy
    tqdm
    gpyopt
    matplotlib
setup_requires =
    setuptools
packages = find:
package_dir =
    =src
python_requires =
    >=3.6

[options.extras_require]
dev =
    twine

[options.packages.find]
where = src

[bdist_wheel]
universal = 0